--- a/index.html
+++ b/index.html
@@ -4,6 +4,8 @@
         <title>OhMyFood</title>
         <meta charset="utf-8">
         <link rel="stylesheet" href="style.css">
+        <link rel="preconnect" href="https://fonts.gstatic.com">
+<link href="https://fonts.googleapis.com/css2?family=Shrikhand&display=swap" rel="stylesheet">
         <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;500&display=swap" rel="stylesheet">
         <script src="https://kit.fontawesome.com/bdf7e61324.js" crossorigin="anonymous"></script>
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -23,23 +25,91 @@
                 </div>
             </section>
             <section>
-                <div>
+                <div class="title-and-filtre">
                     <h2>Fonctionnement</h2>
                     <div class="filtres-container">
                         <div class="filtre1">
+                            <p class="number1">1</p>
                             <i class="fas fa-mobile-alt"></i>
                             <a href="#"><p class="filtres-name1">Choisissez un restaurant</p></a>
                         </div>
                         <div class="filtre2">
+                            <p class="number2">2</p>
                             <i class="fas fa-list-ul"></i>
                             <a href="#"><p class="filtres-name2">Composez votre menu</p></a>
                         </div>
                         <div class="filtre3">
+                            <p class="number3">3</p>
                             <i class="fas fa-store"></i>
                             <a href="#"><p class="filtres-name3">Dégustez au restaurant</p></a>
                         </div>
                     </div>
                 </div>
             </section>
+            <!--Restaurant-->
+            <section class="third-part">
+                <div class="restaurant-container">
+                    <h2>Restaurants</h2>
+                    <div class="first-restaurant">
+                        <div class="gallery-menu" id="image1">
+                            <a href="#">
+                            <div class="new"><p class="p-new">Nouveau</p></div>
+                            <img class="grid-image" src="images/restaurants/jay-wennington-N_Y88TWmGwA-unsplash.jpg" alt="La_palette_du_gout">
+                                <div class="overlay">
+                                    <a href=""><i class="far fa-heart"></i></a>
+                                    <h3 class="caption">La palette du goût</h3>
+                                    <p class="p-caption">Ménilmontant</p>
+                                </div>
+                            </a>
+                        </div>
+                    </div>
+                    <div class="second-restaurant">
+                        <div class="gallery-menu" id="image2">
+                            <a href="#">
+                            <div class="new"><p class="p-new">Nouveau</p></div>
+                            <img class="grid-image" src="images/restaurants/stil-u2Lp8tXIcjw-unsplash.jpg" alt="">
+                                <div class="overlay">
+                                    <a href=""><i class="far fa-heart"></i></a>
+                                    <h3 class="caption">La note enchantée</h3>
+                                    <p class="p-caption">Charonne</p>
+                                </div>
+                            </a>
+                        </div>
+                    </div>
+                    <div class="third-restaurant">
+                        <div class="gallery-menu" id="image3">
+                            <a href="#">
+                            <img class="grid-image" src="images/restaurants/toa-heftiba-DQKerTsQwi0-unsplash.jpg" alt="">
+                                <div class="overlay">
+                                    <a href=""><i class="far fa-heart"></i></a>
+                                    <h3 class="caption">A la française</h3>
+                                    <p class="p-caption">Cité Rouge</p>
+                                </div>
+                            </a>
+                        </div>
+                    </div>
+                    <div class="fourth-restaurant">
+                        <div class="gallery-menu" id="image4">
+                            <a href="#">
+                            <img class="grid-image" src="images/restaurants/louis-hansel-shotsoflouis-qNBGVyOCY8Q-unsplash.jpg" alt="">
+                                <div class="overlay">
+                                    <a href=""><i class="far fa-heart"></i></a>
+                                    <h3 class="caption">Le délice des sens</h3>
+                                    <p class="p-caption">Folie-Méricourt</p>
+                                </div>
+                            </a>
+                        </div>
+                    </div>
+                </div>
+            </section>
+            <footer>
+                <div class="place-footer">
+                    <h4>ohmyfood</h4>
+                    <div class="icon-footer"><i class="fas fa-utensils"></i><p class="footer-caption">Proposez un restaurant</p> </div>
+                    <div class="icon-footer"><i class="fas fa-hands-helping"></i><p class="footer-caption">Devenir partenaire</p></div>
+                    <p class="footer-caption">Mentions légales</p>
+                    <p class="footer-caption">Contact</p>
+                </div>
+            </footer>
     </body>
 </html>
