Finishing second page

--- a/Pages/index.html
+++ b/Pages/index.html
@@ -3,23 +3,24 @@
     <head>
         <title>OhMyFood</title>
         <meta charset="utf-8">
-        <link rel="stylesheet" href="style.css">
+        <link rel="stylesheet" href="../style.css">
         <link rel="preconnect" href="https://fonts.gstatic.com">
-<link href="https://fonts.googleapis.com/css2?family=Shrikhand&display=swap" rel="stylesheet">
+        <link href="https://fonts.googleapis.com/css2?family=Shrikhand&display=swap" rel="stylesheet">
         <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;500&display=swap" rel="stylesheet">
         <script src="https://kit.fontawesome.com/bdf7e61324.js" crossorigin="anonymous"></script>
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
     </head>
     <body>
+        <div class="container">
         <header>
-                <img class="logo" src="/images/logo/ohmyfood.png" alt="Logo_ohmyfood">
+                <img class="logo" src="../images/logo/ohmyfood.png" alt="Logo_ohmyfood">
         </header>
             <section>
                 <div class="localisation">
                     <p class="place"><i class="fas fa-map-marker-alt" aria-hidden="true"></i>Paris, Bellevielle</p>
                 </div>
                 <div class="first-part">
-                    <h1>Réservez le menu qui vous convient</h1>
+                    <h1 class="first-title">Réservez le menu qui vous convient</h1>
                     <p class="description">Découvrez des restaurants d'exception, sélectionnés par nos soins.</p>
                     <div class="bouton1"><p class="text1">Explorer nos restaurants</p></div>
                 </div>
@@ -52,34 +53,33 @@
                     <h2>Restaurants</h2>
                     <div class="first-restaurant">
                         <div class="gallery-menu" id="image1">
-                            <a href="#">
+                            <a href="../Pages/1st-restaurant.html">
                             <div class="new"><p class="p-new">Nouveau</p></div>
-                            <img class="grid-image" src="images/restaurants/jay-wennington-N_Y88TWmGwA-unsplash.jpg" alt="La_palette_du_gout">
+                            <img class="grid-image" src="../images/restaurants/jay-wennington-N_Y88TWmGwA-unsplash.jpg" alt="La_palette_du_gout"></a>
+                            <a href="../Pages/1st-restaurant.html">
                                 <div class="overlay">
-                                    <a href=""><i class="far fa-heart"></i></a>
-                                    <h3 class="caption">La palette du goût</h3>
-                                    <p class="p-caption">Ménilmontant</p>
+                                    <a href="#"><i class="far fa-heart"></i></a>
+                                    <a href="../Pages/1st-restaurant.html"><h3 class="caption">La palette du goût</h3></a>
+                                    <a href="../Pages/1st-restaurant.html"><p class="p-caption">Ménilmontant</p></a>
                                 </div>
-                            </a>
                         </div>
                     </div>
                     <div class="second-restaurant">
                         <div class="gallery-menu" id="image2">
-                            <a href="#">
+                            <a href="../Pages/1st-restaurant.html">
                             <div class="new"><p class="p-new">Nouveau</p></div>
-                            <img class="grid-image" src="images/restaurants/stil-u2Lp8tXIcjw-unsplash.jpg" alt="">
+                            <img class="grid-image" src="../images/restaurants/stil-u2Lp8tXIcjw-unsplash.jpg" alt="La_note_enchantée"></a>
                                 <div class="overlay">
                                     <a href=""><i class="far fa-heart"></i></a>
                                     <h3 class="caption">La note enchantée</h3>
                                     <p class="p-caption">Charonne</p>
                                 </div>
-                            </a>
                         </div>
                     </div>
                     <div class="third-restaurant">
                         <div class="gallery-menu" id="image3">
                             <a href="#">
-                            <img class="grid-image" src="images/restaurants/toa-heftiba-DQKerTsQwi0-unsplash.jpg" alt="">
+                            <img class="grid-image" src="../images/restaurants/toa-heftiba-DQKerTsQwi0-unsplash.jpg" alt="A_la_française">
                                 <div class="overlay">
                                     <a href=""><i class="far fa-heart"></i></a>
                                     <h3 class="caption">A la française</h3>
@@ -91,7 +91,7 @@
                     <div class="fourth-restaurant">
                         <div class="gallery-menu" id="image4">
                             <a href="#">
-                            <img class="grid-image" src="images/restaurants/louis-hansel-shotsoflouis-qNBGVyOCY8Q-unsplash.jpg" alt="">
+                            <img class="grid-image" src="../images/restaurants/louis-hansel-shotsoflouis-qNBGVyOCY8Q-unsplash.jpg" alt="Le_délice_des_sens">
                                 <div class="overlay">
                                     <a href=""><i class="far fa-heart"></i></a>
                                     <h3 class="caption">Le délice des sens</h3>
@@ -102,6 +102,7 @@
                     </div>
                 </div>
             </section>
+        </div>
             <footer>
                 <div class="place-footer">
                     <h4>ohmyfood</h4>
