--- a/Pages/index.html
+++ b/Pages/index.html
@@ -66,13 +66,13 @@
                     </div>
                     <div class="second-restaurant">
                         <div class="gallery-menu" id="image2">
-                            <a href="../Pages/1st-restaurant.html">
+                            <a href="../Pages/2nd-restaurant.html">
                             <div class="new"><p class="p-new">Nouveau</p></div>
                             <img class="grid-image" src="../images/restaurants/stil-u2Lp8tXIcjw-unsplash.jpg" alt="La_note_enchantée"></a>
                                 <div class="overlay">
                                     <a href=""><i class="far fa-heart"></i></a>
-                                    <h3 class="caption">La note enchantée</h3>
-                                    <p class="p-caption">Charonne</p>
+                                    <a href="../Pages/2nd-restaurant.html"><h3 class="caption">La note enchantée</h3></a>
+                                    <a href="../Pages/2nd-restaurant.html"><p class="p-caption">Charonne</p></a>
                                 </div>
                         </div>
                     </div>
