--- a/Pages/4rth-restaurant.html
+++ b/Pages/4rth-restaurant.html
@@ -1,8 +1,8 @@
 <!DOCTYPE html>
 <html>
     <head>
+        <title>Le délice des sens</title>
         <meta charset="utf-8">
-        <title>La palette du goût</title>
         <link rel="stylesheet" href="../style.css">
         <link rel="preconnect" href="https://fonts.gstatic.com">
         <link href="https://fonts.googleapis.com/css2?family=Shrikhand&display=swap" rel="stylesheet">
@@ -13,16 +13,16 @@
     <body>
         <div class="container">
             <header>
-                <a href="../Pages/index.html#1st-restaurant"><i class="fas fa-arrow-left"></i></a>
+                <a href="../Pages/index.html#4rth-restaurant"><i class="fas fa-arrow-left"></i></a>
                 <img class="logo" src="../images/logo/ohmyfood.png" alt="Logo_ohmyfood">
             </header>
             <div class="background-image">
-                <img class="img1" src="/images/restaurants/jay-wennington-N_Y88TWmGwA-unsplash.jpg" alt="">
+                <img class="img1" src="/images/restaurants/louis-hansel-shotsoflouis-qNBGVyOCY8Q-unsplash.jpg" alt="">
             </div>
             <section>
                 <div class="menu-container">
                     <div class="restaurant-name">
-                        <h1 class="second-title">La palette du goût</h1>
+                        <h1 class="second-title">Le délice des sens</h1>
                         <a href=""><i class="far fa-heart two"></i></a>
                     </div>
                     <div class="menu">
@@ -30,23 +30,23 @@
                             <p class="menu-type">Entrées</p>
                             <div class="food-container">
                                 <div class="place-menu">
-                                    <h3 class="menu-title">Fricassée d'escargot</h3>
+                                    <h3 class="menu-title">Tartare de thon</h3>
                                     <div class="price-place">
-                                        <p class="entree-caption">Au piment d'Espelette</p>
+                                        <p class="entree-caption">Assaisonné au yuzu</p>
                                         <p class="p-number"><strong>25€</strong></p>
                                     </div>
                                 </div>
                                 <div class="place-menu">
-                                    <h3 class="menu-title">Foie gras de canard mi-cuit</h3>
+                                    <h3 class="menu-title">Bouchée de homard croustillant</h3>
                                     <div class="price-place">
-                                        <p class="entree-caption">Et ses copeaux de truffe noire</p>
+                                        <p class="entree-caption">Et sa farandole de petits légumes</p>
                                         <p class="p-number"><strong>35€</strong></p>
                                     </div>
                                 </div>
                                 <div class="place-menu">
-                                    <h3 class="menu-title">Oeuf au plat</h3>
+                                    <h3 class="menu-title">Velouté de cèpes</h3>
                                 <div class="price-place">
-                                    <p class="entree-caption">Assaisonné à la truffe sur lit de caviar</p>
+                                    <p class="entree-caption">Aux truffes</p>
                                     <p class="p-number"><strong>20€</strong></p>
                                 </div>
                                 </div>
@@ -56,23 +56,23 @@
                             <p class="menu-type">Plats</p>
                             <div class="food-container">
                                 <div class="place-menu">
-                                    <h3 class="menu-title">Filet de boeuf aux herbes</h3>
+                                    <h3 class="menu-title">Poulet rôti aux herbes de Provence</h3>
                                 <div class="price-place">
-                                    <p class="entree-caption">Accompagné de sa ribambelle de légumes</p>
+                                    <p class="entree-caption">Et sa crème de truffe</p>
                                     <p class="p-number"><strong>40€</strong></p>
                                 </div>
                                 </div>
                                 <div class="place-menu">
-                                    <h3 class="menu-title">Parmentier de queue de boeuf</h3>
+                                    <h3 class="menu-title">Langouste rôtie</h3>
                                     <div class="price-place">
-                                        <p class="entree-caption">À la truffe noire sur sa purée de panais</p>
+                                        <p class="entree-caption">Et ses légumes de saison</p>
                                         <p class="p-number"><strong>35€</strong></p>
                                     </div>
                                 </div>
                                 <div class="place-menu">
-                                    <h3 class="menu-title">Filet de Turbot</h3>
+                                    <h3 class="menu-title">Côte de boeuf Angus</h3>
                                 <div class="price-place">
-                                    <p class="entree-caption">Aux agrumes</p>
+                                    <p class="entree-caption">Et sa purée de panais</p>
                                     <p class="p-number"><strong>44€</strong></p>
                                 </div>
                                 </div>
@@ -82,23 +82,23 @@
                             <p class="menu-type">Desserts</p>
                             <div class="food-container">
                                 <div class="place-menu">
-                                    <h3 class="menu-title">Paris-Brest</h3>
+                                    <h3 class="menu-title">Farandole de desserts</h3>
                                 <div class="price-place">
-                                    <p class="entree-caption">Revisité</p>
+                                    <p class="entree-caption">Du chef</p>
                                     <p class="p-number"><strong>18€</strong></p>
                                 </div>
                                 </div>
                                 <div class="place-menu">
-                                    <h3 class="menu-title">Macaron au chocolat d'exception</h3>
+                                    <h3 class="menu-title">Crème brulée</h3>
                                 <div class="price-place">
-                                    <p class="entree-caption">Et glace à la vanille de Madagascar</p>
+                                    <p class="entree-caption">Revisité</p>
                                     <p class="p-number"><strong>22€</strong></p>
                                 </div>
                                 </div>
                                 <div class="place-menu">
-                                    <h3 class="menu-title">Mousse au chocolat</h3>
+                                    <h3 class="menu-title">Tiramisu</h3>
                                 <div class="price-place">
-                                    <p class="entree-caption">Au piment d'Espelette et à la truffe noire</p>
+                                    <p class="entree-caption">À la noisette</p>
                                     <p class="p-number"><strong>23€</strong></p>
                                 </div>
                                 </div>
@@ -118,5 +118,7 @@
                 <p class="footer-caption">Contact</p>
             </div>
         </footer>
+    </body>
+</html>
     </body>
 </html>
