--- a/Pages/index.html
+++ b/Pages/index.html
@@ -52,10 +52,10 @@
                 <div class="restaurant-container">
                     <h2>Restaurants</h2>
                     <div class="first-restaurant">
+                        <a href="../Pages/1st-restaurant.html" id="1st-restaurant">
                         <div class="gallery-menu" id="image1">
-                            <a href="../Pages/1st-restaurant.html">
                             <div class="new"><p class="p-new">Nouveau</p></div>
-                            <img class="grid-image" src="../images/restaurants/jay-wennington-N_Y88TWmGwA-unsplash.jpg" alt="La_palette_du_gout"></a>
+                            <img class="grid-image" src="../images/restaurants/jay-wennington-N_Y88TWmGwA-unsplash.jpg" alt="La_palette_du_gout">
                             <a href="../Pages/1st-restaurant.html">
                                 <div class="overlay">
                                     <a href="#"><i class="far fa-heart"></i></a>
@@ -63,42 +63,46 @@
                                     <a href="../Pages/1st-restaurant.html"><p class="p-caption">Ménilmontant</p></a>
                                 </div>
                         </div>
+                        </a>
                     </div>
                     <div class="second-restaurant">
+                        <a href="../Pages/2nd-restaurant.html" id="2nd-restaurant">
                         <div class="gallery-menu" id="image2">
-                            <a href="../Pages/2nd-restaurant.html">
                             <div class="new"><p class="p-new">Nouveau</p></div>
-                            <img class="grid-image" src="../images/restaurants/stil-u2Lp8tXIcjw-unsplash.jpg" alt="La_note_enchantée"></a>
+                            <img class="grid-image" src="../images/restaurants/stil-u2Lp8tXIcjw-unsplash.jpg" alt="La_note_enchantée">
                                 <div class="overlay">
                                     <a href=""><i class="far fa-heart"></i></a>
                                     <a href="../Pages/2nd-restaurant.html"><h3 class="caption">La note enchantée</h3></a>
                                     <a href="../Pages/2nd-restaurant.html"><p class="p-caption">Charonne</p></a>
                                 </div>
                         </div>
+                        </a>
                     </div>
                     <div class="third-restaurant">
+                        <a href="../Pages/3rd-restaurant.html" id="3rd-restaurant">
                         <div class="gallery-menu" id="image3">
                             <a href="#">
                             <img class="grid-image" src="../images/restaurants/toa-heftiba-DQKerTsQwi0-unsplash.jpg" alt="A_la_française">
                                 <div class="overlay">
                                     <a href=""><i class="far fa-heart"></i></a>
-                                    <h3 class="caption">A la française</h3>
-                                    <p class="p-caption">Cité Rouge</p>
+                                    <a href="../Pages/3rd-restaurant.html"><h3 class="caption">A la française</h3></a>
+                                    <a href="../Pages/3rd-restaurant.html"><p class="p-caption">Cité Rouge</p></a>
                                 </div>
-                            </a>
                         </div>
+                        </a>
                     </div>
                     <div class="fourth-restaurant">
+                        <a href="../Pages/4rth-restaurant.html" id="4rth-restaurant">
                         <div class="gallery-menu" id="image4">
                             <a href="#">
                             <img class="grid-image" src="../images/restaurants/louis-hansel-shotsoflouis-qNBGVyOCY8Q-unsplash.jpg" alt="Le_délice_des_sens">
                                 <div class="overlay">
                                     <a href=""><i class="far fa-heart"></i></a>
-                                    <h3 class="caption">Le délice des sens</h3>
-                                    <p class="p-caption">Folie-Méricourt</p>
+                                    <a href="../Pages/4rth-restaurant.html"><h3 class="caption">Le délice des sens</h3>
+                                    <a href="../Pages/4rth-restaurant.html"><p class="p-caption">Folie-Méricourt</p>
                                 </div>
-                            </a>
                         </div>
+                        </a>
                     </div>
                 </div>
             </section>
