--- a/Pages/2nd-restaurant.html
+++ b/Pages/2nd-restaurant.html
@@ -13,11 +13,11 @@
     <body>
         <div class="container">
             <header>
-                <a href="../Pages/index.html"><i class="fas fa-arrow-left"></i></a>
+                <a href="../Pages/index.html#2nd-restaurant"><i class="fas fa-arrow-left"></i></a>
                 <img class="logo" src="../images/logo/ohmyfood.png" alt="Logo_ohmyfood">
             </header>
             <div class="background-image">
-                <img class="img1" src="/images/restaurants/jay-wennington-N_Y88TWmGwA-unsplash.jpg" alt="">
+                <img class="img1" src="/images/restaurants/stil-u2Lp8tXIcjw-unsplash.jpg" alt="">
             </div>
             <section>
                 <div class="menu-container">
