--- a/Pages/index.html
+++ b/Pages/index.html
@@ -22,7 +22,7 @@
                 <div class="first-part">
                     <h1 class="first-title">Réservez le menu qui vous convient</h1>
                     <p class="description">Découvrez des restaurants d'exception, sélectionnés par nos soins.</p>
-                    <div class="bouton1"><p class="text1">Explorer nos restaurants</p></div>
+                    <div class="bouton1"><a href="#"><p class="text1">Explorer nos restaurants</p></a></div>
                 </div>
             </section>
             <section>
@@ -56,7 +56,6 @@
                         <div class="gallery-menu" id="image1">
                             <div class="new"><p class="p-new">Nouveau</p></div>
                             <img class="grid-image" src="../images/restaurants/jay-wennington-N_Y88TWmGwA-unsplash.jpg" alt="La_palette_du_gout">
-                            <a href="../Pages/1st-restaurant.html">
                                 <div class="overlay">
                                     <a href="#"><i class="far fa-heart"></i></a>
                                     <a href="../Pages/1st-restaurant.html"><h3 class="caption">La palette du goût</h3></a>
@@ -81,7 +80,6 @@
                     <div class="third-restaurant">
                         <a href="../Pages/3rd-restaurant.html" id="3rd-restaurant">
                         <div class="gallery-menu" id="image3">
-                            <a href="#">
                             <img class="grid-image" src="../images/restaurants/toa-heftiba-DQKerTsQwi0-unsplash.jpg" alt="A_la_française">
                                 <div class="overlay">
                                     <a href=""><i class="far fa-heart"></i></a>
@@ -94,7 +92,6 @@
                     <div class="fourth-restaurant">
                         <a href="../Pages/4rth-restaurant.html" id="4rth-restaurant">
                         <div class="gallery-menu" id="image4">
-                            <a href="#">
                             <img class="grid-image" src="../images/restaurants/louis-hansel-shotsoflouis-qNBGVyOCY8Q-unsplash.jpg" alt="Le_délice_des_sens">
                                 <div class="overlay">
                                     <a href=""><i class="far fa-heart"></i></a>
@@ -110,10 +107,10 @@
             <footer>
                 <div class="place-footer">
                     <h4>ohmyfood</h4>
-                    <div class="icon-footer"><i class="fas fa-utensils"></i><p class="footer-caption">Proposez un restaurant</p> </div>
-                    <div class="icon-footer"><i class="fas fa-hands-helping"></i><p class="footer-caption">Devenir partenaire</p></div>
-                    <p class="footer-caption">Mentions légales</p>
-                    <p class="footer-caption">Contact</p>
+                    <div class="icon-footer"><i class="fas fa-utensils"></i><a href=""><p class="footer-caption">Proposez un restaurant</p></a></div>
+                    <div class="icon-footer"><i class="fas fa-hands-helping"></i><a href=""><p class="footer-caption">Devenir partenaire</p></a></div>
+                    <a href="#"><p class="footer-caption">Mentions légales</p></a>
+                    <a href="#"><p class="footer-caption">Contact</p></a>
                 </div>
             </footer>
     </body>
