--- a/Pages/2nd-restaurant.html
+++ b/Pages/2nd-restaurant.html
@@ -17,7 +17,7 @@
                 <img class="logo" src="../images/logo/ohmyfood.png" alt="Logo_ohmyfood">
             </header>
             <div class="background-image">
-                <img class="img1" src="/images/restaurants/stil-u2Lp8tXIcjw-unsplash.jpg" alt="">
+                <img class="img1" src="../images/restaurants/stil-u2Lp8tXIcjw-unsplash.jpg" alt="">
             </div>
             <section>
                 <div class="menu-container">
@@ -35,12 +35,18 @@
                                         <p class="entree-caption">Accompagnés de leur crème à la truffe</p>
                                         <p class="p-number"><strong>25€</strong></p>
                                     </div>
+                                    <div class="check">
+                                        <a href="#"><i class="fas fa-check-circle"></i></a>
+                                    </div>
                                 </div>
                                 <div class="place-menu">
                                     <h3 class="menu-title">Caviar osciètre</h3>
                                     <div class="price-place">
                                         <p class="entree-caption">Sur blini à la farine de blé noir</p>
                                         <p class="p-number"><strong>35€</strong></p>
+                                    </div>
+                                    <div class="check">
+                                        <a href="#"><i class="fas fa-check-circle"></i></a>
                                     </div>
                                 </div>
                                 <div class="place-menu">
@@ -49,12 +55,18 @@
                                     <p class="entree-caption">Mariné aux zestes d'orange</p>
                                     <p class="p-number"><strong>20€</strong></p>
                                 </div>
+                                <div class="check">
+                                    <a href="#"><i class="fas fa-check-circle"></i></a>
+                                </div>
                                 </div>
                                 <div class="place-menu">
                                     <h3 class="menu-title">Foie gras de canard cuit entier</h3>
                                 <div class="price-place">
                                     <p class="entree-caption">Confiture de figue et pain toasté</p>
                                     <p class="p-number"><strong>35€</strong></p>
+                                </div>
+                                <div class="check">
+                                    <a href="#"><i class="fas fa-check-circle"></i></a>
                                 </div>
                                 </div>
                             </div>
@@ -68,6 +80,9 @@
                                     <p class="entree-caption">Sur lit de purée de céleri-rave</p>
                                     <p class="p-number"><strong>40€</strong></p>
                                 </div>
+                                <div class="check">
+                                    <a href="#"><i class="fas fa-check-circle"></i></a>
+                                </div>
                                 </div>
                                 <div class="place-menu">
                                     <h3 class="menu-title">Langoustine poêlée</h3>
@@ -75,12 +90,18 @@
                                         <p class="entree-caption">Purée de patate douce</p>
                                         <p class="p-number"><strong>35€</strong></p>
                                     </div>
+                                    <div class="check">
+                                        <a href="#"><i class="fas fa-check-circle"></i></a>
+                                    </div>
                                 </div>
                                 <div class="place-menu">
                                     <h3 class="menu-title">Mijoté de queue de boeuf</h3>
                                 <div class="price-place">
                                     <p class="entree-caption">Et riz sauvage aux zestes de citron</p>
                                     <p class="p-number"><strong>44€</strong></p>
+                                </div>
+                                <div class="check">
+                                    <a href="#"><i class="fas fa-check-circle"></i></a>
                                 </div>
                                 </div>
                             </div>
@@ -94,6 +115,9 @@
                                     <p class="entree-caption">Glace au caramel brun et sel de Guérande</p>
                                     <p class="p-number"><strong>18€</strong></p>
                                 </div>
+                                <div class="check">
+                                    <a href="#"><i class="fas fa-check-circle"></i></a>
+                                </div>
                                 </div>
                                 <div class="place-menu">
                                     <h3 class="menu-title">Baba au rhum revisité</h3>
@@ -101,12 +125,18 @@
                                     <p class="entree-caption">Avec son coulis de citron</p>
                                     <p class="p-number"><strong>22€</strong></p>
                                 </div>
+                                <div class="check">
+                                    <a href="#"><i class="fas fa-check-circle"></i></a>
+                                </div>
                                 </div>
                                 <div class="place-menu">
                                     <h3 class="menu-title">Tarte au citron meringuée</h3>
                                 <div class="price-place">
                                     <p class="entree-caption">Déstructurée</p>
                                     <p class="p-number"><strong>23€</strong></p>
+                                </div>
+                                <div class="check">
+                                    <a href="#"><i class="fas fa-check-circle"></i></a>
                                 </div>
                                 </div>
                             </div>
@@ -119,13 +149,11 @@
         <footer>
             <div class="place-footer">
                 <h4>ohmyfood</h4>
-                <div class="icon-footer"><i class="fas fa-utensils"></i><p class="footer-caption">Proposez un restaurant</p> </div>
-                <div class="icon-footer"><i class="fas fa-hands-helping"></i><p class="footer-caption">Devenir partenaire</p></div>
-                <p class="footer-caption">Mentions légales</p>
-                <p class="footer-caption">Contact</p>
+                <div class="icon-footer"><i class="fas fa-utensils"></i><a href=""><p class="footer-caption">Proposez un restaurant</p></a></div>
+                <div class="icon-footer"><i class="fas fa-hands-helping"></i><a href=""><p class="footer-caption">Devenir partenaire</p></a></div>
+                <a href="#"><p class="footer-caption">Mentions légales</p></a>
+                <a href="#"><p class="footer-caption">Contact</p></a>
             </div>
         </footer>
-    </body>
-</html>
     </body>
 </html>
