--- a/Pages/3rd-restaurant.html
+++ b/Pages/3rd-restaurant.html
@@ -17,12 +17,12 @@
                 <img class="logo" src="../images/logo/ohmyfood.png" alt="Logo_ohmyfood">
             </header>
             <div class="background-image">
-                <img class="img1" src="/images/restaurants/toa-heftiba-DQKerTsQwi0-unsplash.jpg" alt="">
+                <img class="img1" src="../images/restaurants/toa-heftiba-DQKerTsQwi0-unsplash.jpg" alt="">
             </div>
             <section>
                 <div class="menu-container">
                     <div class="restaurant-name">
-                        <h1 class="second-title">Ala française</h1>
+                        <h1 class="second-title">A la française</h1>
                         <a href=""><i class="far fa-heart two"></i></a>
                     </div>
                     <div class="menu">
@@ -35,6 +35,9 @@
                                         <p class="entree-caption">Aux zestes d'orange</p>
                                         <p class="p-number"><strong>25€</strong></p>
                                     </div>
+                                    <div class="check">
+                                        <a href="#"><i class="fas fa-check-circle"></i></a>
+                                    </div>
                                 </div>
                                 <div class="place-menu">
                                     <h3 class="menu-title">Velouté de légumes d'antan</h3>
@@ -42,12 +45,18 @@
                                         <p class="entree-caption">Carotte, panais, topinambour</p>
                                         <p class="p-number"><strong>35€</strong></p>
                                     </div>
+                                    <div class="check">
+                                        <a href="#"><i class="fas fa-check-circle"></i></a>
+                                    </div>
                                 </div>
                                 <div class="place-menu">
                                     <h3 class="menu-title">Soupe à l'oignon</h3>
                                 <div class="price-place">
                                     <p class="entree-caption">Revisitée</p>
                                     <p class="p-number"><strong>20€</strong></p>
+                                </div>
+                                <div class="check">
+                                    <a href="#"><i class="fas fa-check-circle"></i></a>
                                 </div>
                                 </div>
                             </div>
@@ -61,6 +70,9 @@
                                     <p class="entree-caption">Accompagnées d'une purée de panais</p>
                                     <p class="p-number"><strong>40€</strong></p>
                                 </div>
+                                <div class="check">
+                                    <a href="#"><i class="fas fa-check-circle"></i></a>
+                                </div>
                                 </div>
                                 <div class="place-menu">
                                     <h3 class="menu-title">Magret de canard</h3>
@@ -68,12 +80,18 @@
                                         <p class="entree-caption">Et parmentier de pommes de terre</p>
                                         <p class="p-number"><strong>35€</strong></p>
                                     </div>
+                                    <div class="check">
+                                        <a href="#"><i class="fas fa-check-circle"></i></a>
+                                    </div>
                                 </div>
                                 <div class="place-menu">
                                     <h3 class="menu-title">Pigeonneau d’Ille-et-Vilaine</h3>
                                 <div class="price-place">
                                     <p class="entree-caption">Sur son lit de gnocchis aux légumes</p>
                                     <p class="p-number"><strong>44€</strong></p>
+                                </div>
+                                <div class="check">
+                                    <a href="#"><i class="fas fa-check-circle"></i></a>
                                 </div>
                                 </div>
                             </div>
@@ -87,6 +105,9 @@
                                     <p class="entree-caption">Et purée de noisettes</p>
                                     <p class="p-number"><strong>18€</strong></p>
                                 </div>
+                                <div class="check">
+                                    <a href="#"><i class="fas fa-check-circle"></i></a>
+                                </div>
                                 </div>
                                 <div class="place-menu">
                                     <h3 class="menu-title">Fondant au chocolat</h3>
@@ -94,12 +115,18 @@
                                     <p class="entree-caption">Revisité</p>
                                     <p class="p-number"><strong>22€</strong></p>
                                 </div>
+                                <div class="check">
+                                    <a href="#"><i class="fas fa-check-circle"></i></a>
+                                </div>
                                 </div>
                                 <div class="place-menu">
                                     <h3 class="menu-title">Millefeuille croustillant</h3>
                                 <div class="price-place">
                                     <p class="entree-caption">Myrtilles et pâte d’amande</p>
                                     <p class="p-number"><strong>23€</strong></p>
+                                </div>
+                                <div class="check">
+                                    <a href="#"><i class="fas fa-check-circle"></i></a>
                                 </div>
                                 </div>
                             </div>
@@ -112,13 +139,11 @@
         <footer>
             <div class="place-footer">
                 <h4>ohmyfood</h4>
-                <div class="icon-footer"><i class="fas fa-utensils"></i><p class="footer-caption">Proposez un restaurant</p> </div>
-                <div class="icon-footer"><i class="fas fa-hands-helping"></i><p class="footer-caption">Devenir partenaire</p></div>
-                <p class="footer-caption">Mentions légales</p>
-                <p class="footer-caption">Contact</p>
+                <div class="icon-footer"><i class="fas fa-utensils"></i><a href=""><p class="footer-caption">Proposez un restaurant</p></a></div>
+                <div class="icon-footer"><i class="fas fa-hands-helping"></i><a href=""><p class="footer-caption">Devenir partenaire</p></a></div>
+                <a href="#"><p class="footer-caption">Mentions légales</p></a>
+                <a href="#"><p class="footer-caption">Contact</p></a>
             </div>
         </footer>
-    </body>
-</html>
     </body>
 </html>
