--- a/Pages/3rd-restaurant.html
+++ b/Pages/3rd-restaurant.html
@@ -4,6 +4,7 @@
         <title>A la française</title>
         <meta charset="utf-8">
         <link rel="stylesheet" href="../style.css">
+        <link rel="stylesheet" href="../style2.css">
         <link rel="preconnect" href="https://fonts.gstatic.com">
         <link href="https://fonts.googleapis.com/css2?family=Shrikhand&display=swap" rel="stylesheet">
         <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;500&display=swap" rel="stylesheet">
@@ -19,7 +20,7 @@
             <div class="background-image">
                 <img class="img1" src="../images/restaurants/toa-heftiba-DQKerTsQwi0-unsplash.jpg" alt="">
             </div>
-            <section>
+            <section class="menu-part">
                 <div class="menu-container">
                     <div class="restaurant-name">
                         <h1 class="second-title">A la française</h1>
@@ -29,7 +30,7 @@
                         <div class="entrees">
                             <p class="menu-type">Entrées</p>
                             <div class="food-container">
-                                <div class="place-menu">
+                                <div class="place-menu first">
                                     <h3 class="menu-title">Tartare de poulpe acidulé</h3>
                                     <div class="price-place">
                                         <p class="entree-caption">Aux zestes d'orange</p>
@@ -39,7 +40,7 @@
                                         <a href="#"><i class="fas fa-check-circle"></i></a>
                                     </div>
                                 </div>
-                                <div class="place-menu">
+                                <div class="place-menu second">
                                     <h3 class="menu-title">Velouté de légumes d'antan</h3>
                                     <div class="price-place">
                                         <p class="entree-caption">Carotte, panais, topinambour</p>
@@ -49,7 +50,7 @@
                                         <a href="#"><i class="fas fa-check-circle"></i></a>
                                     </div>
                                 </div>
-                                <div class="place-menu">
+                                <div class="place-menu third">
                                     <h3 class="menu-title">Soupe à l'oignon</h3>
                                 <div class="price-place">
                                     <p class="entree-caption">Revisitée</p>
@@ -64,7 +65,7 @@
                         <div class="Plats">
                             <p class="menu-type">Plats</p>
                             <div class="food-container">
-                                <div class="place-menu">
+                                <div class="place-menu first">
                                     <h3 class="menu-title">Coquilles Saint-Jacques</h3>
                                 <div class="price-place">
                                     <p class="entree-caption">Accompagnées d'une purée de panais</p>
@@ -74,7 +75,7 @@
                                     <a href="#"><i class="fas fa-check-circle"></i></a>
                                 </div>
                                 </div>
-                                <div class="place-menu">
+                                <div class="place-menu second">
                                     <h3 class="menu-title">Magret de canard</h3>
                                     <div class="price-place">
                                         <p class="entree-caption">Et parmentier de pommes de terre</p>
@@ -84,7 +85,7 @@
                                         <a href="#"><i class="fas fa-check-circle"></i></a>
                                     </div>
                                 </div>
-                                <div class="place-menu">
+                                <div class="place-menu third">
                                     <h3 class="menu-title">Pigeonneau d’Ille-et-Vilaine</h3>
                                 <div class="price-place">
                                     <p class="entree-caption">Sur son lit de gnocchis aux légumes</p>
@@ -99,7 +100,7 @@
                         <div class="Desserts">
                             <p class="menu-type">Desserts</p>
                             <div class="food-container">
-                                <div class="place-menu">
+                                <div class="place-menu first">
                                     <h3 class="menu-title">Pétales de violettes glacés</h3>
                                 <div class="price-place">
                                     <p class="entree-caption">Et purée de noisettes</p>
@@ -109,7 +110,7 @@
                                     <a href="#"><i class="fas fa-check-circle"></i></a>
                                 </div>
                                 </div>
-                                <div class="place-menu">
+                                <div class="place-menu second">
                                     <h3 class="menu-title">Fondant au chocolat</h3>
                                 <div class="price-place">
                                     <p class="entree-caption">Revisité</p>
@@ -119,7 +120,7 @@
                                     <a href="#"><i class="fas fa-check-circle"></i></a>
                                 </div>
                                 </div>
-                                <div class="place-menu">
+                                <div class="place-menu third">
                                     <h3 class="menu-title">Millefeuille croustillant</h3>
                                 <div class="price-place">
                                     <p class="entree-caption">Myrtilles et pâte d’amande</p>
