--- a/Pages/2nd-restaurant.html
+++ b/Pages/2nd-restaurant.html
@@ -4,6 +4,7 @@
         <title>La note enchantée</title>
         <meta charset="utf-8">
         <link rel="stylesheet" href="../style.css">
+        <link rel="stylesheet" href="../style2.css">
         <link rel="preconnect" href="https://fonts.gstatic.com">
         <link href="https://fonts.googleapis.com/css2?family=Shrikhand&display=swap" rel="stylesheet">
         <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;500&display=swap" rel="stylesheet">
@@ -19,7 +20,7 @@
             <div class="background-image">
                 <img class="img1" src="../images/restaurants/stil-u2Lp8tXIcjw-unsplash.jpg" alt="">
             </div>
-            <section>
+            <section class="menu-part">
                 <div class="menu-container">
                     <div class="restaurant-name">
                         <h1 class="second-title">La note enchantée</h1>
@@ -29,7 +30,7 @@
                         <div class="entrees">
                             <p class="menu-type">Entrées</p>
                             <div class="food-container">
-                                <div class="place-menu">
+                                <div class="place-menu first">
                                     <h3 class="menu-title">Ravioles de foie gras</h3>
                                     <div class="price-place">
                                         <p class="entree-caption">Accompagnés de leur crème à la truffe</p>
@@ -39,7 +40,7 @@
                                         <a href="#"><i class="fas fa-check-circle"></i></a>
                                     </div>
                                 </div>
-                                <div class="place-menu">
+                                <div class="place-menu second">
                                     <h3 class="menu-title">Caviar osciètre</h3>
                                     <div class="price-place">
                                         <p class="entree-caption">Sur blini à la farine de blé noir</p>
@@ -49,7 +50,7 @@
                                         <a href="#"><i class="fas fa-check-circle"></i></a>
                                     </div>
                                 </div>
-                                <div class="place-menu">
+                                <div class="place-menu third">
                                     <h3 class="menu-title">Homard et espuma de potiron</h3>
                                 <div class="price-place">
                                     <p class="entree-caption">Mariné aux zestes d'orange</p>
@@ -59,7 +60,7 @@
                                     <a href="#"><i class="fas fa-check-circle"></i></a>
                                 </div>
                                 </div>
-                                <div class="place-menu">
+                                <div class="place-menu fourth">
                                     <h3 class="menu-title">Foie gras de canard cuit entier</h3>
                                 <div class="price-place">
                                     <p class="entree-caption">Confiture de figue et pain toasté</p>
@@ -74,7 +75,7 @@
                         <div class="Plats">
                             <p class="menu-type">Plats</p>
                             <div class="food-container">
-                                <div class="place-menu">
+                                <div class="place-menu first">
                                     <h3 class="menu-title">Noix de coquilles Saint-Jacques</h3>
                                 <div class="price-place">
                                     <p class="entree-caption">Sur lit de purée de céleri-rave</p>
@@ -84,7 +85,7 @@
                                     <a href="#"><i class="fas fa-check-circle"></i></a>
                                 </div>
                                 </div>
-                                <div class="place-menu">
+                                <div class="place-menu second">
                                     <h3 class="menu-title">Langoustine poêlée</h3>
                                     <div class="price-place">
                                         <p class="entree-caption">Purée de patate douce</p>
@@ -94,7 +95,7 @@
                                         <a href="#"><i class="fas fa-check-circle"></i></a>
                                     </div>
                                 </div>
-                                <div class="place-menu">
+                                <div class="place-menu third">
                                     <h3 class="menu-title">Mijoté de queue de boeuf</h3>
                                 <div class="price-place">
                                     <p class="entree-caption">Et riz sauvage aux zestes de citron</p>
@@ -109,7 +110,7 @@
                         <div class="Desserts">
                             <p class="menu-type">Desserts</p>
                             <div class="food-container">
-                                <div class="place-menu">
+                                <div class="place-menu first">
                                     <h3 class="menu-title">Macaron noisette et chocolat</h3>
                                 <div class="price-place">
                                     <p class="entree-caption">Glace au caramel brun et sel de Guérande</p>
@@ -119,7 +120,7 @@
                                     <a href="#"><i class="fas fa-check-circle"></i></a>
                                 </div>
                                 </div>
-                                <div class="place-menu">
+                                <div class="place-menu second">
                                     <h3 class="menu-title">Baba au rhum revisité</h3>
                                 <div class="price-place">
                                     <p class="entree-caption">Avec son coulis de citron</p>
@@ -129,7 +130,7 @@
                                     <a href="#"><i class="fas fa-check-circle"></i></a>
                                 </div>
                                 </div>
-                                <div class="place-menu">
+                                <div class="place-menu third">
                                     <h3 class="menu-title">Tarte au citron meringuée</h3>
                                 <div class="price-place">
                                     <p class="entree-caption">Déstructurée</p>
