Div appearing animation

--- a/Pages/index.html
+++ b/Pages/index.html
@@ -18,12 +18,12 @@
         </header>
             <section>
                 <div class="localisation">
-                    <p class="place"><i class="fas fa-map-marker-alt" aria-hidden="true"></i>Paris, Bellevielle</p>
+                    <p class="place"><i class="fas fa-map-marker-alt" aria-hidden="true"></i>Paris, Belleville</p>
                 </div>
                 <div class="first-part">
                     <h1 class="first-title">Réservez le menu qui vous convient</h1>
                     <p class="description">Découvrez des restaurants d'exception, sélectionnés par nos soins.</p>
-                    <div class="bouton1"><a href="#"><p class="text1">Explorer nos restaurants</p></a></div>
+                    <div class="bouton1"><a href="../Pages/index.html#1st-restaurant"><p class="text1">Explorer nos restaurants</p></a></div>
                 </div>
             </section>
             <section>
