--- a/Pages/index.html
+++ b/Pages/index.html
@@ -33,17 +33,17 @@
                         <div class="filtre1">
                             <p class="number1">1</p>
                             <i class="fas fa-mobile-alt"></i>
-                            <a href="#"><p class="filtres-name1">Choisissez un restaurant</p></a>
+                            <p class="filtres-name1">Choisissez un restaurant</p>
                         </div>
                         <div class="filtre2">
                             <p class="number2">2</p>
                             <i class="fas fa-list-ul"></i>
-                            <a href="#"><p class="filtres-name2">Composez votre menu</p></a>
+                            <p class="filtres-name2">Composez votre menu</p>
                         </div>
                         <div class="filtre3">
                             <p class="number3">3</p>
                             <i class="fas fa-store"></i>
-                            <a href="#"><p class="filtres-name3">Dégustez au restaurant</p></a>
+                            <p class="filtres-name3">Dégustez au restaurant</p>
                         </div>
                     </div>
                 </div>
