--- a/Pages/index.html
+++ b/Pages/index.html
@@ -53,54 +53,50 @@
                 <div class="restaurant-container">
                     <h2>Restaurants</h2>
                     <div class="first-restaurant">
-                        <a href="../Pages/1st-restaurant.html" id="1st-restaurant">
                         <div class="gallery-menu" id="image1">
                             <div class="new"><p class="p-new">Nouveau</p></div>
-                            <img class="grid-image" src="../images/restaurants/jay-wennington-N_Y88TWmGwA-unsplash.jpg" alt="La_palette_du_gout">
+                            <a href="../Pages/1st-restaurant.html" id="1st-restaurant"><img class="grid-image" src="../images/restaurants/jay-wennington-N_Y88TWmGwA-unsplash.jpg" alt="La_palette_du_gout"></a>
                                 <div class="overlay">
-                                    <a href="#"><svg class="heart" width="24" height="24" xmlns="http://www.w3.org/2000/svg" fill-rule="evenodd" clip-rule="evenodd"><path d="M12 21.593c-5.63-5.539-11-10.297-11-14.402 0-3.791 3.068-5.191 5.281-5.191 1.312 0 4.151.501 5.719 4.457 1.59-3.968 4.464-4.447 5.726-4.447 2.54 0 5.274 1.621 5.274 5.181 0 4.069-5.136 8.625-11 14.402m5.726-20.583c-2.203 0-4.446 1.042-5.726 3.238-1.285-2.206-3.522-3.248-5.719-3.248-3.183 0-6.281 2.187-6.281 6.191 0 4.661 5.571 9.429 12 15.809 6.43-6.38 12-11.148 12-15.809 0-4.011-3.095-6.181-6.274-6.181"/></svg></a>
-                                    <a href="../Pages/1st-restaurant.html"><h3 class="caption">La palette du goût</h3></a>
-                                    <a href="../Pages/1st-restaurant.html"><p class="p-caption">Ménilmontant</p></a>
+                                    <i class="fa fa-heart"></i>
+                                    <i class="far fa-heart"></i>
+                                    <h3 class="caption">La palette du goût</h3>
+                                    <p class="p-caption">Ménilmontant</p>
                                 </div>
                         </div>
-                        </a>
                     </div>
                     <div class="second-restaurant">
-                        <a href="../Pages/2nd-restaurant.html" id="2nd-restaurant">
                         <div class="gallery-menu" id="image2">
                             <div class="new"><p class="p-new">Nouveau</p></div>
-                            <img class="grid-image" src="../images/restaurants/stil-u2Lp8tXIcjw-unsplash.jpg" alt="La_note_enchantée">
+                            <a href="../Pages/2nd-restaurant.html" id="2nd-restaurant"><img class="grid-image" src="../images/restaurants/stil-u2Lp8tXIcjw-unsplash.jpg" alt="La_note_enchantée"></a>
                                 <div class="overlay">
-                                    <a href=""><i class="far fa-heart"></i></a>
-                                    <a href="../Pages/2nd-restaurant.html"><h3 class="caption">La note enchantée</h3></a>
-                                    <a href="../Pages/2nd-restaurant.html"><p class="p-caption">Charonne</p></a>
+                                    <i class="fa fa-heart"></i>
+                                    <i class="far fa-heart"></i>
+                                    <h3 class="caption">La note enchantée</h3>
+                                    <p class="p-caption">Charonne</p>
                                 </div>
                         </div>
-                        </a>
                     </div>
                     <div class="third-restaurant">
-                        <a href="../Pages/3rd-restaurant.html" id="3rd-restaurant">
                         <div class="gallery-menu" id="image3">
-                            <img class="grid-image" src="../images/restaurants/toa-heftiba-DQKerTsQwi0-unsplash.jpg" alt="A_la_française">
+                            <a href="../Pages/3rd-restaurant.html" id="3rd-restaurant"><img class="grid-image" src="../images/restaurants/toa-heftiba-DQKerTsQwi0-unsplash.jpg" alt="A_la_française"></a>
                                 <div class="overlay">
-                                    <a href=""><i class="far fa-heart"></i></a>
-                                    <a href="../Pages/3rd-restaurant.html"><h3 class="caption">A la française</h3></a>
-                                    <a href="../Pages/3rd-restaurant.html"><p class="p-caption">Cité Rouge</p></a>
+                                    <i class="fa fa-heart"></i>
+                                    <i class="far fa-heart"></i>
+                                    <h3 class="caption">A la française</h3>
+                                    <p class="p-caption">Cité Rouge</p>
                                 </div>
                         </div>
-                        </a>
                     </div>
                     <div class="fourth-restaurant">
-                        <a href="../Pages/4rth-restaurant.html" id="4rth-restaurant">
                         <div class="gallery-menu" id="image4">
-                            <img class="grid-image" src="../images/restaurants/louis-hansel-shotsoflouis-qNBGVyOCY8Q-unsplash.jpg" alt="Le_délice_des_sens">
+                            <a href="../Pages/4rth-restaurant.html" id="4rth-restaurant"><img class="grid-image" src="../images/restaurants/louis-hansel-shotsoflouis-qNBGVyOCY8Q-unsplash.jpg" alt="Le_délice_des_sens"></a>
                                 <div class="overlay">
-                                    <a href=""><i class="far fa-heart"></i></a>
-                                    <a href="../Pages/4rth-restaurant.html"><h3 class="caption">Le délice des sens</h3>
-                                    <a href="../Pages/4rth-restaurant.html"><p class="p-caption">Folie-Méricourt</p>
+                                    <i class="fa fa-heart"></i>
+                                    <i class="far fa-heart"></i>
+                                    <h3 class="caption">Le délice des sens</h3>
+                                    <p class="p-caption">Folie-Méricourt</p>
                                 </div>
                         </div>
-                        </a>
                     </div>
                 </div>
             </section>
