--- a/Pages/index.html
+++ b/Pages/index.html
@@ -28,7 +28,7 @@
             </section>
             <section>
                 <div class="title-and-filtre">
-                    <h2>Fonctionnement</h2>
+                    <h2 class="function">Fonctionnement</h2>
                     <div class="filtres-container">
                         <div class="filtre1">
                             <p class="number1">1</p>
@@ -51,7 +51,7 @@
             <!--Restaurant-->
             <section class="third-part">
                 <div class="restaurant-container">
-                    <h2>Restaurants</h2>
+                    <h2 class="restaurant">Restaurants</h2>
                     <div class="first-restaurant">
                         <div class="gallery-menu" id="image1">
                             <div class="new"><p class="p-new">Nouveau</p></div>
