Adding 3rd css file

--- a/Pages/1st-restaurant.html
+++ b/Pages/1st-restaurant.html
@@ -5,6 +5,7 @@
         <title>La palette du goût</title>
         <link rel="stylesheet" href="../style.css">
         <link rel="stylesheet" href="../style2.css">
+        <link rel="stylesheet" href="../style3.css">
         <link rel="preconnect" href="https://fonts.gstatic.com">
         <link href="https://fonts.googleapis.com/css2?family=Shrikhand&display=swap" rel="stylesheet">
         <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;500&display=swap" rel="stylesheet">
@@ -24,7 +25,7 @@
                 <div class="menu-container">
                     <div class="restaurant-name">
                         <h1 class="second-title">La palette du goût</h1>
-                        <a href=""><i class="far fa-heart two"></i></a>
+                        <i class="far fa-heart two"></i>
                     </div>
                     <div class="menu">
                         <div class="entrees">
