--- a/Pages/index.html
+++ b/Pages/index.html
@@ -5,6 +5,7 @@
         <meta charset="utf-8">
         <link rel="stylesheet" href="../style.css">
         <link rel="stylesheet" href="../style2.css">
+        <link rel="stylesheet" href="../style3.css">
         <link rel="preconnect" href="https://fonts.gstatic.com">
         <link href="https://fonts.googleapis.com/css2?family=Shrikhand&display=swap" rel="stylesheet">
         <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;500&display=swap" rel="stylesheet">
@@ -32,18 +33,24 @@
                     <div class="filtres-container">
                         <div class="filtre1">
                             <p class="number1">1</p>
+                        <div class="steps">
                             <i class="fas fa-mobile-alt"></i>
                             <p class="filtres-name1">Choisissez un restaurant</p>
                         </div>
+                        </div>
                         <div class="filtre2">
                             <p class="number2">2</p>
+                        <div class="steps">
                             <i class="fas fa-list-ul"></i>
                             <p class="filtres-name2">Composez votre menu</p>
                         </div>
+                        </div>
                         <div class="filtre3">
                             <p class="number3">3</p>
+                        <div class="steps">
                             <i class="fas fa-store"></i>
                             <p class="filtres-name3">Dégustez au restaurant</p>
+                        </div>
                         </div>
                     </div>
                 </div>
