Home page's desktop version finishing

--- a/Pages/index.html
+++ b/Pages/index.html
@@ -27,7 +27,9 @@
                     <div class="bouton1"><a href="../Pages/index.html#1st-restaurant"><p class="text1">Explorer nos restaurants</p></a></div>
                 </div>
             </section>
-            <section>
+        <section>
+            <div class="first-grid">
+            <aside>
                 <div class="title-and-filtre">
                     <h2 class="function">Fonctionnement</h2>
                     <div class="filtres-container">
@@ -54,11 +56,12 @@
                         </div>
                     </div>
                 </div>
-            </section>
+            </aside>
             <!--Restaurant-->
-            <section class="third-part">
+            <div class="third-part">
                 <div class="restaurant-container">
                     <h2 class="restaurant">Restaurants</h2>
+                <div class="grid-restaurant">
                     <div class="first-restaurant">
                         <div class="gallery-menu" id="image1">
                             <div class="new"><p class="p-new">Nouveau</p></div>
@@ -106,7 +109,10 @@
                         </div>
                     </div>
                 </div>
-            </section>
+            </div>
+            </div>
+            </div>
+        </section>
         </div>
             <footer>
                 <div class="place-footer">
